# AvatarPresetManager

./: .gitignore  Makefile  README.md  config.json  main.py  oscq_discovery.py  pyproject.toml  requirements.txt
src/: AvatarPresetManager.py  config.json  main.py
src/AvatarPresetManager/: avatarManager.py  avatarParameter.py  avatarPreset.py  boostrapui.py  fletui.py  oscq_discovery.py  settings.py  ui.py  vrcClient.py  xsnotif.py
src/FitCheck/: avatarManager.py  avatarPreset.py  fletui.py  logger.py  oscq_discovery.py  settings.py  vrcClient.py
