[project]
name = "AvatarPresetManager"
version = "1.0.0"
description = ""
readme = "README.md"
requires-python = ">=3.11"
authors = [
    { name = "XLuma", email = "you@example.com" }
]
dependencies = [
    "python-osc",
    "zeroconf",
    "requests",
    "flet==0.28.3",
]

[tool.flet]
org = "com.xluma"
product = "AvatarPresetManager"
company = "XLuma"
copyright = "Copyright (C) 2025 by XLuma"

[tool.flet.app]
path = "src"

[tool.uv]
dev-dependencies = [
    "flet[all]==0.28.3",
]

[tool.poetry]
package-mode = false

[tool.poetry.group.dev.dependencies]
flet = {extras = ["all"], version = "0.28.3"}